Refactor usage of Collections.singletonList to List.of for improved readability and performance