@@ -17,6 +17,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -95,7 +96,7 @@ public class StringParsers {
     }
 
     public static ParserResult<Optional<Character>> checkCharacter(StringSlice string, Character aChar) {
-        return checkCharacter(string, Collections.singletonList(aChar));
+        return checkCharacter(string, List.of(aChar));
     }
 
     public static ParserResult<Optional<Character>> checkCharacter(StringSlice string,
