@@ -27,7 +27,7 @@ class TreeNodeIndexUtilsTest {
         //  /
         // grandchild1
         grandchild1 = new TestTreeNode("grandchild1");
-        child1 = new TestTreeNode("child1", Collections.singletonList(grandchild1));
+        child1 = new TestTreeNode("child1", List.of(grandchild1));
         child2 = new TestTreeNode("child2");
         root = new TestTreeNode("root", Arrays.asList(child1, child2));
     }
@@ -191,7 +191,7 @@ class TreeNodeIndexUtilsTest {
         @Test
         @DisplayName("Operations on single-element lists should work")
         void testOperationsOnSingleElement_Work() {
-            List<TestTreeNode> singleList = Collections.singletonList(child1);
+            List<TestTreeNode> singleList = List.of(child1);
 
             List<Integer> indices = TreeNodeIndexUtils.indexesOf(singleList, TestTreeNode.class);
             assertThat(indices).containsExactly(0);
